bus routes image!

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,21 +43,7 @@
 
                     <div id="bus-routes">
                         <br>
-                        <p><b>We're sending buses to the following schools:</b></p>
-                        <ul style="list-style: none; padding-left: 0; border: 1px dashed #337ab7;">
-                            <li>Georgia Tech</li>
-                            <li>Waterloo</li>
-                            <li>Toronto/McMaster</li>
-                            <li>McGill</li>
-                            <li>CMU/Pitt</li>
-                            <li>UMD</li>
-                            <li>Purdue</li>
-                            <li>UIUC</li>
-                            <li>NYC</li>
-                            <li>Rochester/Case Western</li>
-                            <li>Rutgers/UPenn</li>
-                            <li>Florida State</li>
-                        </ul>
+                        <img id="bus-routes-img" src="{{ static('assets/bus_routes_white.png') }}">
                     </div>
                     <br>
 
