--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+#bus-routes-img {
+    max-height: 20%;
+    max-width: 100%;
+    border: 1px dashed #337ab7;
+}
+
 .body-info {
     color: rgb(37, 37, 37);
 }
