--- a/templates/application_review.html
+++ b/templates/application_review.html
@@ -101,6 +101,6 @@
         </form>
 
     {% else %}
-        <h1>Sorry There is no result for your search. <a href="{{url_for('mhacks-applicationSearch')}}">Rerun the search</a></h1>
+        <h1>Sorry! There are no result for your search. <a href="{{url_for('mhacks-applicationSearch')}}">Rerun the search</a></h1>
     {% endif %}
 {% endblock %}
