--- a/templates/password_reset_sent.html
+++ b/templates/password_reset_sent.html
@@ -4,8 +4,8 @@
 {%block pagetitle %}Password Reset Ssent{% endblock %}
 
 {% block basic_page_content %}
-    <p class="center alert alert-success">We just sent you an email to reset your password.</p>
-    <p class="center">
+    <p class="text-center alert alert-success">We just sent you an email to reset your password.</p>
+    <p class="text-center">
         Didn't get it? Check your spam or <a href="{{ url_for('mhacks-reset_password') }}">click here to request another one</a>.
     </p>
 {% endblock %}
