--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -4,7 +4,9 @@ p {
     font-weight: 200;
     width: 100%;
 }
-
+html input[type="checkbox"] {
+    margin-left: 15px;
+}
 .title-apply{
 	color: #1CA5AA;
 	margin-top: 10px;
@@ -17,31 +19,35 @@ p {
     opacity: 0.7;
 }
 
-.application-title{
+.application-title {
 	font-size: 16pt;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
-.application-subtitle{
+.application-subtitle {
 	font-size: 12pt;
 	color:  #78CCCB;
+    margin-bottom: 20px;
+    margin-top: -10px;
 }
 
-.full{
+.full {
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 15px;
 }
 
-.checkbox-style{
+.checkbox-style {
 	color:#000; 
 	opacity:.7;
 }
-.select_style 
-{   box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.05);
+.select_style {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.05);
     margin-left: auto;
     margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
-    border-radius: 0px;
+    border-radius: 0;
     background-color: #fff;
     max-width: 100%;
     text-overflow: ellipsis;
@@ -49,8 +55,7 @@ p {
     white-space: nowrap;
 }
 
-.select_style select
-{
+.select_style select {
     -webkit-appearance: none;
     appearance: none;
     width:120%;
@@ -65,26 +70,48 @@ p {
     white-space: nowrap;
 }
 
-.addMargin{
-    padding: 15px;
-}
-
-.textfield{
+.textfield {
     box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.05);
     border: 1px solid  #ccc;
     width: 85%;
-    height: 100px !important ;
+    height: 100px;
     display: inline;
+    resize: vertical;
+    margin-bottom: 10px;
 }
 
 .subtitle {
     margin-top: 30px;
 }
 
-.field-form .label-apply {
+.form-field .form-label {
     display: block;
 }
 
-.check-width{
+.check-width {
     width: 40%;
+}
+
+.ui-autocomplete {
+    max-height: 100px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+    font-family: 'Ubuntu', sans-serif !important;
+    font-size: 13px !important;
+}
+.ui-state-active {
+    background-color: #337ab7 !important;
+    border: none !important;
+}
+
+* html .ui-autocomplete {
+    max-height: 200px;
+}
+
+#id_cortex {
+    height: 150px;
+}
+#id_cortex:focus {
+    outline: none;
 }
