--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -8,14 +8,14 @@ body {
     margin: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    font-family: 'Source Sans Pro';
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 12pt;
     color: rgba(255, 255, 255, 0.8);
     background-color: #0c2949;
 }
 
 h1 {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu', sans-serif;
     font-size: 16pt;
     font-weight: bold;
     color: #0093B1;
@@ -24,9 +24,9 @@ h1 {
 }
 
 h2 {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu', sans-serif;
     font-size: 14pt;
-    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
     font-weight: bolder;
     color: white;
@@ -36,16 +36,16 @@ h2 {
 
 h3 {
     font-size: 11pt;
-    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
     color: white;
     padding: 0;
 }
 
 h4 {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu', sans-serif;
     font-size: 14pt;
-    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
     color: rgba(37, 37, 37, 0.63);
     padding: 0;
@@ -53,12 +53,15 @@ h4 {
 }
 
 p {
-    font-family: 'Source Sans Pro';
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 12pt;
     font-weight: 200;
     width: 92%;
 }
-
+a {
+    color: #337ab7;
+    text-decoration: none
+}
 /* --- Utility Classes --- */
 
 .turquoise {
@@ -90,13 +93,9 @@ p {
 }
 
 #container {
-    margin-left: 0px;
+    margin-left: 0;
     width: 100%;
     position: absolute;
-}
-
-.center {
-    text-align: center;
 }
 
 .center-col {
@@ -129,10 +128,6 @@ p {
     align-items: center;
 }
 
-.text-center {
-    text-align: center;
-}
-
 .visibilityVisible {
     visibility: visible !important;
     transition: visibility 0.4s;
@@ -159,8 +154,9 @@ p {
 /* --- Header and Header Content --- */
 
 .header {
+    top: 0;
     height: 120px;
-    box-shadow: 0px -4px 16px 0px #000000;
+    box-shadow: 0 -4px 16px 0 #000000;
     text-align: center;
     padding: 0;
     width: 100%;
@@ -173,9 +169,11 @@ p {
     opacity: 0.95;
 }
 
-.header a {
-    background-color: rgba(255,255,255,0.45);
-    box-shadow: 0px 2px 5px 0px #727272;
+.header button {
+    font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif;
+    background-color: rgba(255, 255, 255, 0.45);
+    box-shadow: 0 2px 5px 0 #727272;
 
     padding: 5px 10px;
     width: 90px;
@@ -188,30 +186,9 @@ p {
     letter-spacing: 0.6px;
 
     transition: all 0.2s;
-}
 
-.header a:hover {
-    background-color: #FFE641;
-    box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
-    color: rgba(37, 37, 37, 0.63);
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-.header button {
-    background-color: rgba(255,255,255,0.45);
-    box-shadow: 0px 2px 5px 0px #727272;
-
-    padding: 5px 10px;
-    width: 90px;
-    margin: 2px 0 2px 10px;
-
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    letter-spacing: 0.6px;
-
-    transition: all 0.2s;
+    border-width: 0;
+    line-height: inherit;
 }
 
 .header button:hover {
@@ -257,6 +234,7 @@ p {
 #logoM {
     height: 90px;
     margin: 0 auto;
+    vertical-align: middle;
 }
 
 #logoText {
@@ -453,86 +431,6 @@ p {
     max-height: 120px;
 }
 
-/* ---- Grid ---- */
-
-.grid {
-    width: 100%;
-    margin-top: 120px;
-}
-
-/* clearfix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-/* ---- Grid Item ---- */
-
-.grid-item, .grid-item-content {
-    width: 160px;
-    height: 120px;
-    z-index: 1;
-}
-
-.grid-item-content {
-    width: 160px;
-    height: 120px;
-    padding: 15px;
-    visibility: visible;
-    transition: all 0.2s;
-    border: 1px solid rgba(20, 20, 20, 0.1);
-}
-
-.grid-item[data-expandable='1'] {
-    cursor: pointer;
-}
-
-.grid-item[data-expandable='1'] .expand-icon:before {
-    font-family: FontAwesome;
-    content: "\f055";
-    position:absolute;
-    right: 0;
-    transition: all 0.2s;
-    height: 16px;
-    width: 16px;
-    margin: 10px;
-}
-
-.width2.grid-item, .width2 .grid-item-content {
-    width: 320px;
-}
-
-.tile-shadow {
-    /*box-shadow: 0 0 15px 2px rgba(50, 50, 50, 0.75);*/
-    z-index: 2;
-}
-
-/* --- Expanded Grid Item --- */
-
-.grid-item-expand {
-    width: 480px;
-    height: 360px;
-    z-index: 5;
-    cursor: pointer;
-}
-
-.grid-item-expand.expand-small {
-    width: 480px !important;
-    height: 360px !important;
-}
-
-.grid-item-expand.expand-medium {
-    width: 640px !important;
-    height: 480px !important;
-}
-
-/* --- Grid Item Content --- */
-
-.grid-item:hover h1, .grid-item:hover h3 {
-    color: #0093B1 !important;
-    transition: color 0.2s;
-}
 
 .basic-info h1 {
     /* Style as h2 */
@@ -692,7 +590,7 @@ li.answer {
     background-color: #0093B1;
     padding-bottom: 20px;
     color: white;
-    font-family:'Ubuntu';
+    font-family:'Ubuntu', sans-serif;
     font-size: 10pt;
     text-align:center;
     display: flex;
@@ -1013,7 +911,7 @@ html button {
 }
 
 .row.none{
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .drop-down-button{
@@ -1021,7 +919,7 @@ html button {
      margin-left: auto;
     margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
-    border-radius: 0px;
+    border-radius: 0;
     background-color: #fff;
 }
 
@@ -1034,4 +932,7 @@ html fieldset {
     margin: 0;
     padding: 0;
     overflow-x:hidden;
+}
+.text-center {
+    text-align: center;
 }
