--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -5,89 +5,61 @@
     {% endblock %}
 {% endblock %}
 
-{%block basic_page_title %}
+{% block basic_page_title %}
     {% block form_title %}{% endblock %}
 {% endblock %}
 
 {% block basic_page_content %}
     {% if form %}
-        <form class="form-horizontal" method="POST" autocomplete="on" action="{% block form_action %}{% endblock %}" {% block form_enctype %}{% endblock %}>
+        <form class="form-horizontal" method="POST" autocomplete="on"
+              action="{% block form_action %}{% endblock %}" {% block form_enctype %}{% endblock %}>
             {{ csrf_input }}
             <fieldset>
                 <div class="section body-form">
                     {% block non_field_errors %}
                         {% for error in form.non_field_errors() %}
-                            <p class="center alert alert-danger">{{ error }}</p>
+                            <p class="text-center alert alert-danger error">{{ error }}</p>
                         {% endfor %}
                     {% endblock %}
-                    <div class="row">
-                        {% for field in form %}
-
-
-                             {% if field.field.before %}
+                    {% for field in form %}
+                        {% if field.field.title %}
+                            <div class="row none">
+                                <div class="col-lg-12 text-center title-apply">
+                                    <div class="application-title">{{ field.field.title }}</div>
                                 </div>
-                                <div class="row one">
-                                    <div class="col-lg-12 text-center title-apply">
-                                        <div class="application-title  {{ field.field.textclass if field.field.useclass }}">{{ field.field.beforetext }}</div>
-                                    </div>
-                                </div>
-                                <div class="row ">
-                            {% endif %}
-
-
-                            <div class="field-form col-lg-{{ field.field.cols if field.field.cols else '12' }} text-center addMargin ">
-                                <label class="label-apply">
-                                    {{ field.label }}
-                                </label>
-                                {{ field.as_widget() }}
-                                {% for error in form.errors[field.name] %}
-                                    <p class="center alert alert-danger">{{ error }}</p>
-                                {% endfor %}
                             </div>
-
-                            {% if field.field.end_row %}
-                                </div>
-                                <div class="row">
-                            {% endif %}
-
-                            {% if field.field.demographic %}
-                                </div>
-                                <div class="row three">
-                                    <div class="col-lg-12 text-center title-apply">
-                                        <div class="application-title ">Demographic Info</div>
-                                    </div>
-                                </div>
+                            {% if field.field.subtitle %}
                                 <div class="row none">
                                     <div class="col-lg-12 text-center">
-                                        <div class="application-subtitle">Not Required</div>
+                                        <div class="application-subtitle">{{ field.field.subtitle }}</div>
                                     </div>
                                 </div>
-                                <div class="row ">
                             {% endif %}
-
-                            {% if field.field.after %}
-                                </div>
-                                <div class="row three">
-                                    <div class="col-lg-12 text-center title-apply">
-                                        <div class="application-title "> {{ field.field.aftertext }}</div>
-                                    </div>
-                                </div>
-                                <div class="row ">
-
-                            {% endif %}
-
-                           
-                        {% endfor %}
+                        {% endif %}
+                        <div class="form-field col-lg-{{ field.field.cols if field.field.cols else '12' }}">
+                            <label class="form-label">
+                                {{ field.label }}
+                            </label>
+                            {{ field.as_widget() }}
                         </div>
-                    <div class="submit-row">
-                        {% block submit_row %}
-                            <button value="submit" data-toggle="tooltip" name="_submit" id="submit" class="four columns offset-by-four">{% block submit_title %}Submit{% endblock %}</button>
-                        {% endblock %}
-                    </div>
-                    <div class="text-center row three">
-                        {% block form_footer %}
-                        {% endblock %}
-                    </div>
+                        {% for error in form.errors[field.name] %}
+                            <div class="text-center alert alert-danger error"><p>{{ error }}</p></div>
+                        {% endfor %}
+                        {% if field.field.space_after %}
+                            <div class="form-field col-lg-12" style="padding-bottom: 30px"></div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="submit-row">
+                    {% block submit_row %}
+                        <button value="submit" data-toggle="tooltip" name="_submit" id="submit" class="four columns offset-by-four">
+                            {% block submit_title %}Submit{% endblock %}
+                        </button>
+                    {% endblock %}
+                </div>
+                <div class="text-center row three">
+                    {% block form_footer %}
+                    {% endblock %}
                 </div>
             </fieldset>
         </form>
