--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,11 @@
-<div class="header turquoise header-form">
+<div style="padding-top: 120px"></div>
+<div class="header turquoise">
     <div id="eventInfo">
         <h2>October 7-9</h2>
         <p>Detroit Masonic Temple</p>
     </div>
     <div id="logo">
-        <a href="/">
+        <a href="{{ url_for('mhacks-home') }}">
             <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
             <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
         </a>
@@ -59,3 +60,4 @@
         </div>
     </div>
 </div>
+<script src="{{ static('javascript/header.js') }}" type="text/javascript"></script>
