--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,7 @@
 {% block content %}
     <canvas id="bgCanvas"></canvas>
     <div id="container">
-        <div class="header turquoise">
-            <div id="eventInfo">
-                <h2>October 7-9</h2>
-                <p>Detroit Masonic Temple</p>
-            </div>
-            <div id="logo">
-                <a href="{{ url_for('mhacks-home') }}">
-                    <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
-                    <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
-                </a>
-            </div>
-            <div id="headerButtons">
-                <a href="mailto:hackathon@umich.edu">Email</a>
-                <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
-                <a href="{{ url_for('mhacks-apply') }}">Apply</a>
-            </div>
-            <div id="headerDropdown">
-                <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
-                <div id="dropdownContent" class="turquoise">
-                    <a href="mailto:hackathon@umich.edu">Email</a>
-                    <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
-                    <a href="{{ url_for('mhacks-apply') }}">Apply</a>
-                </div>
-            </div>
-        </div>
+        {% include 'header.html' %}
         <div class="grid">
             <div class="grid-item lightBlue" data-remove="1" data-expandable="0">
                 <div class="grid-item-icon">
@@ -40,7 +16,6 @@
             </div>
             <div class="grid-item expand-small blue tile-shadow" data-remove="0" data-expandable="1">
                 <div class="expand-icon"></div>
-                <!--i class="fa fa-plus-circle fa-pull-right" aria-hidden="false"></i-->
                 <div class="grid-item-content">
                     <div class="basic-info">
                         <h1>What is MHacks?</h1>
@@ -566,9 +541,6 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
-            type="application/javascript"></script>
     <script src="{{ static('javascript/packery.pkgd.min.js') }}" type="application/javascript"></script>
-
-    <script src="{{ static('javascript/main.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascript/index.js') }}" type="application/javascript"></script>
 {% endblock %}
