--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% block non_field_errors %}
     {% for error in form.non_field_errors().as_data() %}
         {% for message in error %}
-            <p class="center alert alert-danger">{{ message }}
+            <p class="text-center alert alert-danger">{{ message }}
                 {% if error.code == 'unverified' %}
                     <a href="{{ url_for('mhacks-verification-email', kwargs={'user_pk': error.user_pk}) }}">Click to resend</a>.
                 {% endif %}
@@ -17,6 +17,6 @@
 {% endblock %}
 {% block submit_title %}LOGIN{% endblock %}
 {% block form_footer %}
-    <p> Don't have an account? <br> Click <a href="{{ url_for('mhacks-register') }}">here</a> to create one!</p>
-    <p><a href="{{ url_for('mhacks-reset_password') }}">Forgot password?</a></p>
+    <div>Don't have an account? <br> Click <a href="{{ url_for('mhacks-register') }}">here</a> to create one!</div>
+    <div class="row"><a href="{{ url_for('mhacks-reset_password') }}">Forgot password?</a></div>
 {% endblock %}
