Started on requested UX Changes: Header buttons opaque, Apply button doesn't show up on application page, vertically centered School/Major labels on application page Also fixed a couple things broken by css reorganization: dropdown header menu closing immediately after opening, tiles not expanding correctly in mobile view

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -75,7 +75,9 @@ html input[type="checkbox"] {
 }
 
 .form-field .form-label {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .ui-autocomplete {
