--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -85,3 +85,109 @@ h3 {
     color: #0093B1 !important;
     transition: color 0.2s;
 }
+
+/* --- @media Queries --- */
+@media only screen and (min-width: 1300px) {
+    .grid-item-expand {
+        width: 1120px;
+        height: 600px;
+    }
+
+    .grid-item-expand .grid-item-content {
+        width: 1120px;
+        height: 600px;
+    }
+}
+
+@media only screen and (max-width: 1300px){
+    .grid-item-expand {
+        width: 800px !important;
+        height: 480px !important;
+    }
+
+    .grid-item-expand .grid-item-content {
+        width: 800px;
+        height: 480px;
+    }
+}
+
+@media only screen and (max-width: 1140px) {
+    .grid-item-expand {
+        width: 640px !important;
+        height: 480px !important;
+    }
+
+    .grid-item-expand .grid-item-content {
+        width: 640px;
+        height: 480px;
+    }
+
+    .faq-item {
+        width: 45%;
+        margin-right: 4%;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .grid-item-expand {
+        width: 480px !important;
+        height: 360px !important;
+    }
+
+    .grid-item-expand .grid-item-content {
+        width: 480px;
+        height: 360px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .grid-item[data-remove='2'] {
+        width: 0px;
+        height: 0px;
+        visibility: hidden;
+        transition: all 0.2s;
+    }
+
+    .grid-item[data-remove='2'] * {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 720px) {
+    .grid-item[data-remove='1'] {
+        width: 0px;
+        height: 0px;
+        visibility: hidden;
+        transition: all 0.2s;
+    }
+
+    .grid-item[data-remove='1'] * {
+        display: none;
+    }
+
+    .grid-item-expand, .grid-item-expand .grid-item-content,
+    .grid-item, .grid-item .grid-item-content,
+    .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
+    .grid-item-expand.expand-small, .grid-item-expand.expand-small .grid-item-content {
+        width: 100% !important;
+    }
+
+    .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
+    .grid-item-expand.expand-small, .grid-item-expand.expand-small .grid-item-content {
+        max-width: 100%;
+    }
+
+    .grid-item .grid-item-content .basic-info {
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .grid-item .grid-item-content .basic-info h1 {
+        font-size: 24pt;
+        transition: all 0.2s;
+    }
+}
