Page title typo fix

--- a/templates/password_reset_sent.html
+++ b/templates/password_reset_sent.html
@@ -1,7 +1,7 @@
 {% extends 'basic_page.html' %}
 
 {%block basic_page_title %}Password Reset Sent{% endblock %}
-{%block pagetitle %}Password Reset Ssent{% endblock %}
+{%block pagetitle %}Password Reset Sent{% endblock %}
 
 {% block basic_page_content %}
     <p class="text-center alert alert-success">We just sent you an email to reset your password.</p>
