--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,7 +5,7 @@
      <script>
         $(document).ready(function() {
             $("#id_employment").change(function() {
-                if (this.value == "Not Interested") {
+                if (this.value == "none") {
                     $("#id_technical_skills").parent().hide();
                 }
                 else {
