--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -231,14 +231,13 @@ html button {
 
 .form-full {
     margin: 0 5px 10px 5px;
-    display: block;
+    display: inline;
     text-align: center;
     float: none;
     width: 100%;
 }
 
 .form-full label {
-    float: none;
     text-align: center;
     width: 100%;
 }
@@ -253,6 +252,11 @@ html button {
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 15px;
+}
+
+.full-widget {
+    margin: auto;
+    text-align: center;
 }
 
 .checkbox-style {
