new bus routes and reg umich bus text

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -16,6 +16,16 @@
     </script>
 {% endblock %}
 
+{% block basic_page_content %}
+    <div style="text-align: left; padding: 20px">
+        <p style="text-align: center"><b><i>
+            UMich Students - We will be providing buses to and from the venue on Friday and Sunday.
+        </i></b></p>
+    </div>
+
+    {{ super() }}
+{% endblock %}
+
 {% block basic_page_title %}
     {% block form_title %}Registration{% endblock %}
 {% endblock %}
