Replaced past sponsor logos with first batch of current sponsors

--- a/templates/index.html
+++ b/templates/index.html
@@ -438,7 +438,7 @@
                         the most out of your experience.</p>
                     <p>Interested in sponsoring? Want more information? Shoot us an email at
                         <a href="mailto:sponsor-mhacks@umich.edu">sponsor-mhacks@umich.edu</a>
-                        <br/><br/>We have an awesome lineup of sponsors for you.<br/>Check back soon for company logos.
+                        <br/><br/>We have an awesome lineup of sponsors for you below.<br/>Check back soon for even more company logos!
                     </p>
                 </div>
                 <div class="col-2-smallR" style="text-align: center">
@@ -468,51 +468,28 @@
             </div>
 
 
-            <h1 class="grey-text" style="margin-top:25px;">Past Sponsors</h1>
+            <h1 class="grey-text" style="margin-top:25px;">Sponsors</h1>
             <div class="col-1 center-col" style="margin-top: 25px;">
                 <div class="logo-container big-tile">
-                    <div class="logo-row">
-                        <a target="_blank" href="http://www.cfe.umich.edu"><img
-                                src="{{ static('assets/cfe_logo.png') }}"
-                                alt="Previous Sponsor Logo - U of M CFE"></a>
+                    <div class="logo-row medium">
+                        <div><a target="_blank" href="http://a16z.com"><img
+                                src="{{ static('assets/a16z_logo.png') }}" alt="Sponsor Logo - a16z"></a></div>
+                        <div><a target="_blank" href="http://www.magna.com/"><img
+                                src="{{ static('assets/Magna_logo.png') }}" alt="Sponsor Logo - Magna Electronics"></a></div>
+                        <div><a target="_blank" href="https://corp.mhplan.com/"><img
+                                src="{{ static('assets/Meridian_logo.png') }}" alt="Sponsor Logo - Meridian Health Plan"></a></div>
                     </div>
-                    <div class="logo-row">
-                        <a target="_blank" href="http://careers.walmart.com/"><img
-                                src="{{ static('assets/Walmart_Logo.png') }}" alt="Previous Sponsor Logo - Walmart"></a>
-                        <a target="_blank" href="https://corporate.target.com/careers/career-areas/technology"><img
-                                src="{{ static('assets/target_logo.png') }}" alt="Previous Sponsor Logo - Target"></a>
-                        <a target="_blank" href="https://www.google.com/about/careers"><img
-                                src="{{ static('assets/Google_logo.png') }}" alt="Previous Sponsor Logo - Google"></a>
-                    </div>
-                    <div class="logo-row">
-                        <a target="_blank"
-                           href="https://jobs.disneycareers.com/category/technology-information-technology-jobs/391/1945/1"><img
-                                src="{{ static('assets/Disney_Logo.png') }}" alt="Previous Sponsor Logo - Disney"></a>
-                        <a target="_blank" href="http://www.developers.arcgis.com"><img
-                                src="{{ static('assets/Esri_logo.png') }}" alt="Previous Sponsor Logo - Esri"></a>
-                        <a target="_blank" href="http://www.facebook.com/university"><img
-                                src="{{ static('assets/Facebook_logo.png') }}"
-                                alt="Previous Sponsor Logo - Facebook"></a>
-                    </div>
-                    <div class="logo-row">
-                        <a target="_blank" href="http://www.firebase.com"><img
-                                src="{{ static('assets/Firebase_logo.png') }}"
-                                alt="Previous Sponsor Logo - Firebase"></a>
-                        <a target="_blank" href="http://www.intel.com/content/www/us/en/homepage.html"><img
-                                src="{{ static('assets/intel_logo.png') }}" alt="Previous Sponsor Logo - Intel"></a>
-                        <a target="_blank" href="http://www.microsoft.com"><img
-                                src="{{ static('assets/Microsoft_logo.png') }}" alt="Previous Sponsor Logo - Microsoft"></a>
-                    </div>
-                    <div class="logo-row">
-                        <a target="_blank" href="https://www.mongodb.com"><img
-                                src="{{ static('assets/MongoDB_Logo.png') }}"
-                                alt="Previous Sponsor Logo - MongoDB"></a>
-                        <a target="_blank" href="http://www.twilio.com"><img
-                                src="{{ static('assets/twilio_logo.png') }}"
-                                alt="Previous Sponsor Logo - Twilio"></a>
-                        <a target="_blank" href="https://www.usa.visa.com"><img
-                                src="{{ static('assets/Visa_logo.png') }}"
-                                alt="Previous Sponsor Logo - Visa"></a>
+                    <div class="logo-row small">
+                        <div><a target="_blank" href="http://www.1517fund.com/"><img
+                                src="{{ static('assets/1517_logo.png') }}" alt="Sponsor Logo - 1517"></a></div>
+                        <div><a target="_blank" href="http://www.bloomberg.com/"><img
+                                src="{{ static('assets/Bloomberg_logo.png') }}" alt="Sponsor Logo - Bloomberg"></a></div>
+                        <div><a target="_blank" href="https://cycle.io/"><img
+                                src="{{ static('assets/Cycle_logo.png') }}" alt="Sponsor Logo - Cycle"></a></div>
+                        <div><a target="_blank" href="http://www.lifeatexpedia.com/university"><img
+                                src="{{ static('assets/Expedia_logo.png') }}" alt="Sponsor Logo - Expedia"></a></div>
+                        <div><a target="_blank" href="https://www.venturestorm.com/"><img
+                                src="{{ static('assets/VentureStorm_logo.png') }}" alt="Sponsor Logo - VentureStorm"></a></div>
                     </div>
                 </div>
             </div>
