--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -415,22 +415,52 @@ a {
 .logo-container .logo-row {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     padding: 10px 20px;
 }
 
-.logo-row a {
-    width: 32%;
-    margin: 1% 20px;
+.logo-row div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
 }
 
-.logo-row img {
-    max-width: 100%;
-    max-height: 120px;
+.logo-row.small div {
+    width: 20%;
+}
+.logo-row.small a {
+    max-width: 175px;
+}
+.logo-row.small img {
+    max-height: 80px;
+    max-width: 175px;
 }
 
+.logo-row.medium div {
+    width: 33%;
+}
+.logo-row.medium a {
+    max-width: 275px;
+}
+.logo-row.medium img {
+    max-height: 175px;
+    max-width: 275px;
+}
+
+.logo-row.large div {
+    width: 50%;
+}
+.logo-row.large a {
+    max-width: 350px;
+}
+.logo-row.large img {
+    max-height: 300px;
+    max-width: 350px;
+}
 
 .basic-info h1 {
     /* Style as h2 */
@@ -653,9 +683,8 @@ li.answer {
         flex-direction: column;
     }
 
-    .logo-row a {
-        width: 75%;
-        margin: 20px;
+    .logo-row div {
+        width: 100% !important;
     }
 
     .quotes .quote-column {
