registered + bus csv

--- a/templates/application_search.html
+++ b/templates/application_search.html
@@ -6,7 +6,7 @@
 
 {% block form_action %}
     <input type="submit" name="hacker" value="Search Hacker Apps" />
-    <input type="submit" name="mentor" value="Search Mentor Apps" />
+    <input type="submit" name="mentor" value="Search Mentor Apps" />v
 {% endblock %}
 
 {% block form_enctype %}enctype="multipart/form-data"{% endblock %}
